createNSVTable has now multi-core support.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@284 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 43011bd148f9addce22ed0a9ec2cafa1bd5d6df8

--- a/pkg/QuasiAlign/inst/doc/QuasiAlign.Rnw
+++ b/pkg/QuasiAlign/inst/doc/QuasiAlign.Rnw
@@ -503,6 +503,9 @@ The convenience function \func{processSequences} loads all FASTA
 files from a directory into the database and then converts them into NSVs.
 
 <<>>=
+library("doParallel")
+registerDoParallel()
+
 db<-createGenDB("example.sqlite")
 processSequences(system.file("examples/phylums", package="QuasiAlign"), db)
 @
@@ -587,8 +590,8 @@ stores them in a directory specified by the \code{classifier_dir} parameter.
 The following command creates models for all phylums stored in the database and stores them in directory models (which is created first) 
 and places them in the subdirectory phylum.
 <<trainClassifier>>=
-library(doMC)
-registerDoMC()
+library(doParallel)
+registerDoParallel()
 
 db <- openGenDB(system.file("examples/16S.sqlite",package="QuasiAlign"))
 db
