--- a/pkg/QuasiAlign/inst/doc/QuasiAlign.Rnw
+++ b/pkg/QuasiAlign/inst/doc/QuasiAlign.Rnw
@@ -383,7 +383,7 @@ In the following we will demonstrate the key features of
 
 First, we load the library into the R environment.
 <<>>=
-library(QuasiAlign)
+library("QuasiAlign")
 @
 
 To start we need to create an empty GenDB to store and organize
@@ -590,7 +590,7 @@ stores them in a directory specified by the \code{classifier_dir} parameter.
 The following command creates models for all phylums stored in the database and stores them in directory models (which is created first) 
 and places them in the subdirectory phylum.
 <<trainClassifier>>=
-library(doParallel)
+library("doParallel")
 registerDoParallel()
 
 db <- openGenDB(system.file("examples/16S.sqlite",package="QuasiAlign"))
@@ -663,14 +663,12 @@ removeGenClassifier(classifier)
 
 \subsection{Assessing classification accuracy}
 <<accuracy>>=
-library(caret)
-library(doMC)
-registerDoMC()
+library("caret")
+library("doParallel")
+registerDoParallel()
 
 db <- openGenDB(system.file("examples/16S.sqlite",package="QuasiAlign"))
 nSequences(db)
-
-#createNSVTable(db)
 
 
 ids <- getIDs(db)
@@ -695,27 +693,6 @@ confusionMatrix(pred$class, true)
 <<>>=
 removeGenClassifier(classifier)
 @
-
-%
-%
-%\subsection{Assessing classification accuracy}
-%
-%For validation we split the data into a training and test set.
-%We use the training sequences for generating the models and then evaluate
-%classification accuracy on the hold out test set.  This is implemented in
-%function \func{validateModels}. 
-%The parameter pctTest is used to specify
-%the fraction of sequences to be used for test dataset. 
-%<<>>=
-%validation <- validateModels(db, modelDir="models", rank="phylum", pctTest=.1)
-%head(validation$scores)
-%head(validation$prediction)
-%table(validation$prediction[,"actual"], 
-%    validation$prediction[,"predicted"])
-%@
-%
-%The function \func{validateModels} returns a list of two vectors - the first containing the scores of the test sequences against the training models and the second containing the predicted rank of the sequences based on the highest score. The prediction vector can be used to find the classification accuracy of the models. 
-%
 
 \subsection{Visualizing Sequences and NSVs}
 One of the unique advantages of QuasiAlign is that it is able to cluster similar sequences very rapidly and accurately as compared to other methods such as multiple sequence alignment.
