--- a/pkg/BioTools/Work/vignette/BioTools.Rnw
+++ b/pkg/BioTools/Work/vignette/BioTools.Rnw
@@ -342,17 +342,19 @@ unlink("example.sqlite")
 <<>>=
 dna <- readDNAStringSet(system.file("examples/DNA_example.fasta",
         package="BioTools"))
-dna
+dna <- narrow(dna, start=1, end=60)
 
 al <- clustal(dna)
 al
+@
 
+<<eval=false>>=
 ### inspect alignment
 detail(al)
 @
 
-<<sequencelogo, fig=TRUE, include=FALSE>>=
-plot(al, 1, 20)
+<<sequencelogo, fig=TRUE, include=FALSE, height=3>>=
+plot(al, 1, 40)
 @
 
 \begin{figure}
@@ -361,6 +363,18 @@ plot(al, 1, 20)
 \caption{Sequence logo of alignment.}
 \label{fig:abundanceplot}
 \end{figure}
+
+<<boxshade>>=
+boxshade(al, file="alignment.pdf")
+@
+
+\begin{figure}
+\centering
+\includegraphics[width=1\linewidth]{alignment}
+\caption{Representaion of a DNA multiple alignment using boxshade.}
+\label{fig:boxshade}
+\end{figure}
+
 
 <<>>=
 rna <- readRNAStringSet(system.file("examples/RNA_example.fasta",
