some fixes and BLAST uses not predict.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@295 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: bd6d7523d4b49a7b01ce2559035f6161cc405b62

--- a/pkg/BioTools/Work/vignette/BioTools.Rnw
+++ b/pkg/BioTools/Work/vignette/BioTools.Rnw
@@ -439,7 +439,7 @@ removeRDP(customRDP)
 
 \section{Sequence Retrieval with BLAST}
 
-<<eval=FALSE>>=
+<<>>=
 seq <- readRNAStringSet(system.file("examples/RNA_example.fasta",
         package="BioTools"))
 
@@ -447,9 +447,15 @@ seq <- readRNAStringSet(system.file("examples/RNA_example.fasta",
 names(seq) <-  sapply(strsplit(names(seq), " "), "[", 1)
 seq
 
-## run BLAST (I have the NCBI database downloaded to ~/tmp/blast)
-cl <- BLAST(seq, db="~/tmp/blast/refseq_rna")
-cl[1:5, ]
+## load a BLAST database (replace db with the location + name of the BLAST DB)
+blast <- BLAST(db="~/tmp/blast/16SMicrobial")
+blast
+
+print(blast, info=TRUE)
+
+## query a sequence using BLAST
+cl <- predict(blast, seq[1,])
+cl[1:5,]
 @
 
 
