Added installation documentation files
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@306 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 0c07035b239a7a3143866838b04e95a4799ca513

--- a/pkg/BioTools/inst/README
+++ b/pkg/BioTools/inst/README
@@ -13,7 +13,7 @@ Linux (Ubuntu/Debian):
 
 OS X:
 * Install ClustalW from http://www.clustal.org/
-* Install kalign from ???
+* Install kalign from http://msa.sbc.su.se/cgi-bin/msa.cgi by downloading the source of Kalign (current).
 * Boxshade is currenly not available for OS X 
   (you can compile it with free pascal compiler) 
 * BLAST: Install blast+ 
