improved annotation reader.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@322 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 635196a019a723d91085d849c6443fe8e7d1ecc6

--- a/pkg/BioTools/Work/vignette/BioTools.Rnw
+++ b/pkg/BioTools/Work/vignette/BioTools.Rnw
@@ -123,6 +123,7 @@ database driven sequence management for 16S rRNA.
 options(width = 70, prompt="R> ", digits=4)
 ### for sampling
 set.seed(1234)
+unlink("example.sqlite")
 @
 
 \section{Introduction}
